// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Charts/Gauge/Radial Autosize smoke-test 1`] = `
<div style="width: 250px; height: 250px; border: 1px solid red;">
  <div class="_container_1u3dt_1"
       style="height: 100%; width: 100%;"
  >
    <svg width="248"
         height="248"
         class="_svg_1u3dt_30"
         tabindex="0"
    >
      <g transform="translate(0, 0)">
        <g transform="translate(124, 124)">
          <g>
            <g tabindex="0"
               aria-label="undefined: No value"
               role="graphics-document"
            >
              <path role="graphics-symbol"
                    d="M0,-104A104,104,0,1,1,0,104A104,104,0,1,1,0,-104M0,-99A99,99,0,1,0,0,99A99,99,0,1,0,0,-99Z"
                    fill="#353d44"
                    style="cursor: initial;"
              >
              </path>
            </g>
          </g>
          <g>
            <g tabindex="0"
               aria-label="Austin, TX: 24"
               role="graphics-document"
            >
              <path role="graphics-symbol"
                    d="M0,-104A104,104,0,0,1,103.795,-6.53L98.805,-6.216A99,99,0,0,0,0,-99Z"
                    fill="#00ECB1"
                    style="cursor: initial;"
              >
              </path>
            </g>
          </g>
          <text dy="-0.5em"
                x="0"
                y="15"
                text-anchor="middle"
                class="_valueLabel_1h164_1"
          >
            24
          </text>
          <text x="0"
                y="124"
                text-anchor="middle"
                alignment-baseline="text-after-edge"
                class="_valueLabel_1eyd5_1"
          >
            Austin, TX
          </text>
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Charts/Gauge/Radial CustomArc smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="300"
     height="300"
     style="height: 300px; width: 300px;"
>
  <svg width="300"
       height="300"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(0, 0)">
      <g transform="translate(150, 150)">
        <g>
          <g tabindex="0"
             aria-label="undefined: No value"
             role="graphics-document"
          >
            <path role="graphics-symbol"
                  d="M0,-130A130,130,0,1,1,0,130A130,130,0,1,1,0,-130M0,-105A105,105,0,1,0,0,105A105,105,0,1,0,0,-105Z"
                  fill="#353d44"
                  style="cursor: initial;"
            >
            </path>
          </g>
        </g>
        <g>
          <g tabindex="0"
             aria-label="Austin, TX: 24"
             role="graphics-document"
          >
            <path role="graphics-symbol"
                  d="M0,-116.833A12.5,12.5,0,0,1,13.83,-129.262A130,130,0,0,1,128.139,-21.919A12.5,12.5,0,0,1,116.603,-7.336L116.603,-7.336A12.5,12.5,0,0,1,103.497,-17.704A105,105,0,0,0,11.17,-104.404A12.5,12.5,0,0,1,0,-116.833Z"
                  fill="#38e52c"
                  style="cursor: initial;"
            >
            </path>
          </g>
        </g>
        <text dy="-0.5em"
              x="0"
              y="15"
              text-anchor="middle"
              class="_valueLabel_1h164_1"
        >
          24
        </text>
        <text x="0"
              y="150"
              text-anchor="middle"
              alignment-baseline="text-after-edge"
              class="_valueLabel_1eyd5_1"
        >
          Austin, TX
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Charts/Gauge/Radial FilledArc smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="350"
     height="350"
     style="height: 350px; width: 350px;"
>
  <svg width="350"
       height="350"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(0, 0)">
      <g transform="translate(175, 175)">
        <g>
          <circle fill="gray"
                  r="155"
          >
          </circle>
          <g tabindex="0"
             aria-label="undefined: No value"
             role="graphics-document"
          >
            <path role="graphics-symbol"
                  d="M0,-155A155,155,0,1,1,0,155A155,155,0,1,1,0,-155M0,-150A150,150,0,1,0,0,150A150,150,0,1,0,0,-150Z"
                  fill="#353d44"
                  style="cursor: initial;"
            >
            </path>
          </g>
        </g>
        <g>
          <g tabindex="0"
             aria-label="Austin, TX: 24"
             role="graphics-document"
          >
            <path role="graphics-symbol"
                  d="M0,-155A155,155,0,0,1,154.694,-9.733L149.704,-9.419A150,150,0,0,0,0,-150Z"
                  fill="#00ECB1"
                  style="cursor: initial;"
            >
            </path>
          </g>
        </g>
        <text dy="-0.5em"
              x="0"
              y="15"
              text-anchor="middle"
              class="_valueLabel_1h164_1"
        >
          24
        </text>
        <text x="0"
              y="175"
              text-anchor="middle"
              alignment-baseline="text-after-edge"
              class="_valueLabel_1eyd5_1"
        >
          Austin, TX
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Charts/Gauge/Radial GaugeStacked smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="700"
     height="300"
     style="height: 300px; width: 700px;"
>
  <svg width="700"
       height="300"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(0, 0)">
      <g transform="translate(350, 150)">
        <g>
          <g>
            <g tabindex="0"
               aria-label="undefined: No value"
               role="graphics-document"
            >
              <path role="graphics-symbol"
                    d="M0,-105A105,105,0,1,1,0,105A105,105,0,1,1,0,-105M0,-96A96,96,0,1,0,0,96A96,96,0,1,0,0,-96Z"
                    fill="#353d44"
                    style="cursor: initial;"
              >
              </path>
            </g>
          </g>
          <g>
            <g tabindex="0"
               aria-label="Third Party: 40"
               role="graphics-document"
            >
              <path role="graphics-symbol"
                    d="M0,-105A105,105,0,1,1,-99.861,-32.447L-91.301,-29.666A96,96,0,1,0,0,-96Z"
                    fill="#DF8D03"
                    style="cursor: initial;"
              >
              </path>
            </g>
          </g>
        </g>
        <g>
          <g>
            <g tabindex="0"
               aria-label="undefined: No value"
               role="graphics-document"
            >
              <path role="graphics-symbol"
                    d="M0,-123A123,123,0,1,1,0,123A123,123,0,1,1,0,-123M0,-114A114,114,0,1,0,0,114A114,114,0,1,0,0,-114Z"
                    fill="#353d44"
                    style="cursor: initial;"
              >
              </path>
            </g>
          </g>
          <g>
            <g tabindex="0"
               aria-label="Malware: 10"
               role="graphics-document"
            >
              <path role="graphics-symbol"
                    d="M0,-123A123,123,0,0,1,81.564,92.067L75.596,85.33A114,114,0,0,0,0,-114Z"
                    fill="#993FFF"
                    style="cursor: initial;"
              >
              </path>
            </g>
            <g tabindex="0"
               aria-label="DLP: 16"
               role="graphics-document"
            >
              <path role="graphics-symbol"
                    d="M81.564,92.067A123,123,0,1,1,0,-123L0,-114A114,114,0,1,0,75.596,85.33Z"
                    fill="#D9C0FF"
                    style="cursor: initial;"
              >
              </path>
            </g>
          </g>
        </g>
        <g>
          <g>
            <g tabindex="0"
               aria-label="undefined: No value"
               role="graphics-document"
            >
              <path role="graphics-symbol"
                    d="M0,-141A141,141,0,1,1,0,141A141,141,0,1,1,0,-141M0,-132A132,132,0,1,0,0,132A132,132,0,1,0,0,-132Z"
                    fill="#353d44"
                    style="cursor: initial;"
              >
              </path>
            </g>
          </g>
          <g>
            <g tabindex="0"
               aria-label="IDS: 26"
               role="graphics-document"
            >
              <path role="graphics-symbol"
                    d="M0,-141A141,141,0,0,1,140.722,8.853L131.74,8.288A132,132,0,0,0,0,-132Z"
                    fill="#00FFC7"
                    style="cursor: initial;"
              >
              </path>
            </g>
          </g>
        </g>
        <text x="0"
              y="-20"
              text-anchor="middle"
              alignment-baseline="middle"
        >
          <tspan x="0"
                 font-size="16"
                 font-weight="700"
                 fill="#E9E9E9"
          >
            Hours Complete
          </tspan>
          <tspan x="0"
                 dy="1.2em"
                 font-size="32"
                 font-weight="800"
                 fill="#FFFFFF"
          >
            67%
          </tspan>
          <tspan x="0"
                 dy="1.5em"
                 font-size="14"
                 fill="#c2b0e7"
          >
            <tspan font-weight="bold"
                   fill="#00E5AF"
            >
              ↑ 4%
            </tspan>
            from last week
          </tspan>
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Charts/Gauge/Radial Multi smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="700"
     height="300"
     style="height: 300px; width: 700px;"
>
  <svg width="700"
       height="300"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(0, 0)">
      <g transform="translate(87.5, 150)">
        <g>
          <g tabindex="0"
             aria-label="undefined: No value"
             role="graphics-document"
          >
            <path role="graphics-symbol"
                  d="M0,-67.5A67.5,67.5,0,1,1,0,67.5A67.5,67.5,0,1,1,0,-67.5M0,-62.5A62.5,62.5,0,1,0,0,62.5A62.5,62.5,0,1,0,0,-62.5Z"
                  fill="#353d44"
                  style="cursor: initial;"
            >
            </path>
          </g>
        </g>
        <g>
          <g tabindex="0"
             aria-label="DLP: 10"
             role="graphics-document"
          >
            <path role="graphics-symbol"
                  d="M0,-67.5A67.5,67.5,0,0,1,67.5,0L62.5,0A62.5,62.5,0,0,0,0,-62.5Z"
                  fill="#CE003E"
                  style="cursor: initial;"
            >
            </path>
          </g>
        </g>
        <text dy="-0.5em"
              x="0"
              y="15"
              text-anchor="middle"
              class="_valueLabel_1h164_1"
        >
          10
        </text>
        <text x="0"
              y="150"
              text-anchor="middle"
              alignment-baseline="text-after-edge"
              class="_valueLabel_1eyd5_1"
        >
          DLP
        </text>
      </g>
      <g transform="translate(262.5, 150)">
        <g>
          <g tabindex="0"
             aria-label="undefined: No value"
             role="graphics-document"
          >
            <path role="graphics-symbol"
                  d="M0,-67.5A67.5,67.5,0,1,1,0,67.5A67.5,67.5,0,1,1,0,-67.5M0,-62.5A62.5,62.5,0,1,0,0,62.5A62.5,62.5,0,1,0,0,-62.5Z"
                  fill="#353d44"
                  style="cursor: initial;"
            >
            </path>
          </g>
        </g>
        <g>
          <g tabindex="0"
             aria-label="Malware: 30"
             role="graphics-document"
          >
            <path role="graphics-symbol"
                  d="M0,-67.5A67.5,67.5,0,1,1,-67.5,0L-62.5,0A62.5,62.5,0,1,0,0,-62.5Z"
                  fill="#DF8D03"
                  style="cursor: initial;"
            >
            </path>
          </g>
        </g>
        <text dy="-0.5em"
              x="0"
              y="15"
              text-anchor="middle"
              class="_valueLabel_1h164_1"
        >
          30
        </text>
        <text x="0"
              y="150"
              text-anchor="middle"
              alignment-baseline="text-after-edge"
              class="_valueLabel_1eyd5_1"
        >
          Malware
        </text>
      </g>
      <g transform="translate(437.5, 150)">
        <g>
          <g tabindex="0"
             aria-label="undefined: No value"
             role="graphics-document"
          >
            <path role="graphics-symbol"
                  d="M0,-67.5A67.5,67.5,0,1,1,0,67.5A67.5,67.5,0,1,1,0,-67.5M0,-62.5A62.5,62.5,0,1,0,0,62.5A62.5,62.5,0,1,0,0,-62.5Z"
                  fill="#353d44"
                  style="cursor: initial;"
            >
            </path>
          </g>
        </g>
        <g>
          <g tabindex="0"
             aria-label="IDS: 20"
             role="graphics-document"
          >
            <path role="graphics-symbol"
                  d="M0,-67.5A67.5,67.5,0,1,1,0,67.5L0,62.5A62.5,62.5,0,1,0,0,-62.5Z"
                  fill="#00ECB1"
                  style="cursor: initial;"
            >
            </path>
          </g>
        </g>
        <text dy="-0.5em"
              x="0"
              y="15"
              text-anchor="middle"
              class="_valueLabel_1h164_1"
        >
          20
        </text>
        <text x="0"
              y="150"
              text-anchor="middle"
              alignment-baseline="text-after-edge"
              class="_valueLabel_1eyd5_1"
        >
          IDS
        </text>
      </g>
      <g transform="translate(612.5, 150)">
        <g>
          <g tabindex="0"
             aria-label="undefined: No value"
             role="graphics-document"
          >
            <path role="graphics-symbol"
                  d="M0,-67.5A67.5,67.5,0,1,1,0,67.5A67.5,67.5,0,1,1,0,-67.5M0,-62.5A62.5,62.5,0,1,0,0,62.5A62.5,62.5,0,1,0,0,-62.5Z"
                  fill="#353d44"
                  style="cursor: initial;"
            >
            </path>
          </g>
        </g>
        <g>
          <g tabindex="0"
             aria-label="Phishing Attack: 40"
             role="graphics-document"
          >
            <path role="graphics-symbol"
                  d="M0,-67.5A67.5,67.5,0,1,1,0,67.5A67.5,67.5,0,1,1,0,-67.5M0,-62.5A62.5,62.5,0,1,0,0,62.5A62.5,62.5,0,1,0,0,-62.5Z"
                  fill="#9FA9B1"
                  style="cursor: initial;"
            >
            </path>
          </g>
        </g>
        <text dy="-0.5em"
              x="0"
              y="15"
              text-anchor="middle"
              class="_valueLabel_1h164_1"
        >
          40
        </text>
        <text x="0"
              y="150"
              text-anchor="middle"
              alignment-baseline="text-after-edge"
              class="_valueLabel_1eyd5_1"
        >
          Phishing Attack
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Charts/Gauge/Radial MultiLine smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="350"
     height="350"
     style="height: 350px; width: 350px;"
>
  <svg width="350"
       height="350"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(0, 0)">
      <g transform="translate(87.5, 87.5)">
        <g>
          <g tabindex="0"
             aria-label="undefined: No value"
             role="graphics-document"
          >
            <path role="graphics-symbol"
                  d="M0,-67.5A67.5,67.5,0,1,1,0,67.5A67.5,67.5,0,1,1,0,-67.5M0,-62.5A62.5,62.5,0,1,0,0,62.5A62.5,62.5,0,1,0,0,-62.5Z"
                  fill="#353d44"
                  style="cursor: initial;"
            >
            </path>
          </g>
        </g>
        <g>
          <g tabindex="0"
             aria-label="DLP: 10"
             role="graphics-document"
          >
            <path role="graphics-symbol"
                  d="M0,-67.5A67.5,67.5,0,0,1,39.676,-54.609L36.737,-50.564A62.5,62.5,0,0,0,0,-62.5Z"
                  fill="#00ECB1"
                  style="cursor: initial;"
            >
            </path>
          </g>
        </g>
        <text dy="-0.5em"
              x="0"
              y="15"
              text-anchor="middle"
              class="_valueLabel_1h164_1"
        >
          10
        </text>
        <text x="0"
              y="87.5"
              text-anchor="middle"
              alignment-baseline="text-after-edge"
              class="_valueLabel_1eyd5_1"
        >
          DLP
        </text>
      </g>
      <g transform="translate(262.5, 87.5)">
        <g>
          <g tabindex="0"
             aria-label="undefined: No value"
             role="graphics-document"
          >
            <path role="graphics-symbol"
                  d="M0,-67.5A67.5,67.5,0,1,1,0,67.5A67.5,67.5,0,1,1,0,-67.5M0,-62.5A62.5,62.5,0,1,0,0,62.5A62.5,62.5,0,1,0,0,-62.5Z"
                  fill="#353d44"
                  style="cursor: initial;"
            >
            </path>
          </g>
        </g>
        <g>
          <g tabindex="0"
             aria-label="Malware: 30"
             role="graphics-document"
          >
            <path role="graphics-symbol"
                  d="M0,-67.5A67.5,67.5,0,0,1,64.196,20.859L59.441,19.314A62.5,62.5,0,0,0,0,-62.5Z"
                  fill="#00ECB1"
                  style="cursor: initial;"
            >
            </path>
          </g>
        </g>
        <text dy="-0.5em"
              x="0"
              y="15"
              text-anchor="middle"
              class="_valueLabel_1h164_1"
        >
          30
        </text>
        <text x="0"
              y="87.5"
              text-anchor="middle"
              alignment-baseline="text-after-edge"
              class="_valueLabel_1eyd5_1"
        >
          Malware
        </text>
      </g>
      <g transform="translate(87.5, 262.5)">
        <g>
          <g tabindex="0"
             aria-label="undefined: No value"
             role="graphics-document"
          >
            <path role="graphics-symbol"
                  d="M0,-67.5A67.5,67.5,0,1,1,0,67.5A67.5,67.5,0,1,1,0,-67.5M0,-62.5A62.5,62.5,0,1,0,0,62.5A62.5,62.5,0,1,0,0,-62.5Z"
                  fill="#353d44"
                  style="cursor: initial;"
            >
            </path>
          </g>
        </g>
        <g>
          <g tabindex="0"
             aria-label="IDS: 20"
             role="graphics-document"
          >
            <path role="graphics-symbol"
                  d="M0,-67.5A67.5,67.5,0,0,1,64.196,-20.859L59.441,-19.314A62.5,62.5,0,0,0,0,-62.5Z"
                  fill="#00ECB1"
                  style="cursor: initial;"
            >
            </path>
          </g>
        </g>
        <text dy="-0.5em"
              x="0"
              y="15"
              text-anchor="middle"
              class="_valueLabel_1h164_1"
        >
          20
        </text>
        <text x="0"
              y="87.5"
              text-anchor="middle"
              alignment-baseline="text-after-edge"
              class="_valueLabel_1eyd5_1"
        >
          IDS
        </text>
      </g>
      <g transform="translate(262.5, 262.5)">
        <g>
          <g tabindex="0"
             aria-label="undefined: No value"
             role="graphics-document"
          >
            <path role="graphics-symbol"
                  d="M0,-67.5A67.5,67.5,0,1,1,0,67.5A67.5,67.5,0,1,1,0,-67.5M0,-62.5A62.5,62.5,0,1,0,0,62.5A62.5,62.5,0,1,0,0,-62.5Z"
                  fill="#353d44"
                  style="cursor: initial;"
            >
            </path>
          </g>
        </g>
        <g>
          <g tabindex="0"
             aria-label="Phishing Attack: 40"
             role="graphics-document"
          >
            <path role="graphics-symbol"
                  d="M0,-67.5A67.5,67.5,0,0,1,39.676,54.609L36.737,50.564A62.5,62.5,0,0,0,0,-62.5Z"
                  fill="#00ECB1"
                  style="cursor: initial;"
            >
            </path>
          </g>
        </g>
        <text dy="-0.5em"
              x="0"
              y="15"
              text-anchor="middle"
              class="_valueLabel_1h164_1"
        >
          40
        </text>
        <text x="0"
              y="87.5"
              text-anchor="middle"
              alignment-baseline="text-after-edge"
              class="_valueLabel_1eyd5_1"
        >
          Phishing Attack
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Charts/Gauge/Radial Single smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="300"
     height="300"
     style="height: 300px; width: 300px;"
>
  <svg width="300"
       height="300"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(0, 0)">
      <g transform="translate(150, 150)">
        <g>
          <g tabindex="0"
             aria-label="undefined: No value"
             role="graphics-document"
          >
            <path role="graphics-symbol"
                  d="M0,-130A130,130,0,1,1,0,130A130,130,0,1,1,0,-130M0,-120A120,120,0,1,0,0,120A120,120,0,1,0,0,-120Z"
                  fill="#353d44"
                  style="cursor: initial;"
            >
            </path>
          </g>
        </g>
        <g>
          <g tabindex="0"
             aria-label="Austin, TX: 24"
             role="graphics-document"
          >
            <path role="graphics-symbol"
                  d="M0,-130A130,130,0,0,1,129.743,-8.163L119.763,-7.535A120,120,0,0,0,0,-120Z"
                  fill="#418AD7"
                  style="cursor: initial;"
            >
            </path>
          </g>
        </g>
        <text dy="-0.5em"
              x="0"
              y="15"
              text-anchor="middle"
              class="_valueLabel_1h164_1"
        >
          24
        </text>
        <text x="0"
              y="150"
              text-anchor="middle"
              alignment-baseline="text-after-edge"
              class="_valueLabel_1eyd5_1"
        >
          Austin, TX
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Charts/Gauge/Radial Stacked smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="700"
     height="300"
     style="height: 300px; width: 700px;"
>
  <svg width="700"
       height="300"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(0, 0)">
      <g transform="translate(350, 150)">
        <g>
          <g>
            <g tabindex="0"
               aria-label="undefined: No value"
               role="graphics-document"
            >
              <path role="graphics-symbol"
                    d="M0,-105A105,105,0,1,1,0,105A105,105,0,1,1,0,-105M0,-94.615A94.615,94.615,0,1,0,0,94.615A94.615,94.615,0,1,0,0,-94.615Z"
                    fill="#353d44"
                    style="cursor: initial;"
              >
              </path>
            </g>
          </g>
          <g>
            <g tabindex="0"
               aria-label="DLP: 10"
               role="graphics-document"
            >
              <path role="graphics-symbol"
                    d="M0,-105A105,105,0,1,1,0,105A105,105,0,1,1,0,-105M0,-94.615A94.615,94.615,0,1,0,0,94.615A94.615,94.615,0,1,0,0,-94.615Z"
                    fill="#CE003E"
                    style="cursor: initial;"
              >
              </path>
            </g>
          </g>
        </g>
        <g>
          <g>
            <g tabindex="0"
               aria-label="undefined: No value"
               role="graphics-document"
            >
              <path role="graphics-symbol"
                    d="M0,-116.538A116.538,116.538,0,1,1,0,116.538A116.538,116.538,0,1,1,0,-116.538M0,-106.154A106.154,106.154,0,1,0,0,106.154A106.154,106.154,0,1,0,0,-106.154Z"
                    fill="#353d44"
                    style="cursor: initial;"
              >
              </path>
            </g>
          </g>
          <g>
            <g tabindex="0"
               aria-label="Malware: 30"
               role="graphics-document"
            >
              <path role="graphics-symbol"
                    d="M0,-116.538A116.538,116.538,0,1,1,0,116.538A116.538,116.538,0,1,1,0,-116.538M0,106.154A106.154,106.154,0,1,0,0,-106.154A106.154,106.154,0,1,0,0,106.154Z"
                    fill="#DF8D03"
                    style="cursor: initial;"
              >
              </path>
            </g>
          </g>
        </g>
        <g>
          <g>
            <g tabindex="0"
               aria-label="undefined: No value"
               role="graphics-document"
            >
              <path role="graphics-symbol"
                    d="M0,-128.077A128.077,128.077,0,1,1,0,128.077A128.077,128.077,0,1,1,0,-128.077M0,-117.692A117.692,117.692,0,1,0,0,117.692A117.692,117.692,0,1,0,0,-117.692Z"
                    fill="#353d44"
                    style="cursor: initial;"
              >
              </path>
            </g>
          </g>
          <g>
            <g tabindex="0"
               aria-label="IDS: 20"
               role="graphics-document"
            >
              <path role="graphics-symbol"
                    d="M0,-128.077A128.077,128.077,0,1,1,-110.918,64.038L-101.925,58.846A117.692,117.692,0,1,0,0,-117.692Z"
                    fill="#00ECB1"
                    style="cursor: initial;"
              >
              </path>
            </g>
          </g>
        </g>
        <g>
          <g>
            <g tabindex="0"
               aria-label="undefined: No value"
               role="graphics-document"
            >
              <path role="graphics-symbol"
                    d="M0,-139.615A139.615,139.615,0,1,1,0,139.615A139.615,139.615,0,1,1,0,-139.615M0,-129.231A129.231,129.231,0,1,0,0,129.231A129.231,129.231,0,1,0,0,-129.231Z"
                    fill="#353d44"
                    style="cursor: initial;"
              >
              </path>
            </g>
          </g>
          <g>
            <g tabindex="0"
               aria-label="Phishing Attack: 40"
               role="graphics-document"
            >
              <path role="graphics-symbol"
                    d="M0,-139.615A139.615,139.615,0,1,1,0,139.615A139.615,139.615,0,1,1,0,-139.615M0,-129.231A129.231,129.231,0,1,0,0,129.231A129.231,129.231,0,1,0,0,-129.231Z"
                    fill="#9FA9B1"
                    style="cursor: initial;"
              >
              </path>
            </g>
          </g>
        </g>
        <text x="0"
              y="-20"
              text-anchor="middle"
              alignment-baseline="middle"
              class="_stackedDescriptionLabel_1h95t_1"
        >
          Last 12 months
        </text>
        <text x="0"
              y="0"
              text-anchor="middle"
              alignment-baseline="middle"
              class="_stackedValueLabel_1w6zx_1"
        >
          Security Threats
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Charts/Gauge/Radial WithGradient smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="700"
     height="300"
     style="height: 300px; width: 700px;"
>
  <svg width="700"
       height="300"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(0, 0)">
      <g transform="translate(350, 150)">
        <g>
          <g tabindex="0"
             aria-label="undefined: No value"
             role="graphics-document"
          >
            <path role="graphics-symbol"
                  d="M0,-130A130,130,0,1,1,0,130A130,130,0,1,1,0,-130M0,-115A115,115,0,1,0,0,115A115,115,0,1,0,0,-115Z"
                  fill="#353d44"
                  style="cursor: initial;"
            >
            </path>
          </g>
        </g>
        <g>
          <g tabindex="0"
             aria-label="Austin, TX: 24"
             role="graphics-document"
          >
            <path role="graphics-symbol"
                  d="M0,-122.27A7.5,7.5,0,0,1,7.959,-129.756A130,130,0,0,1,129,-16.091A7.5,7.5,0,0,1,122.029,-7.677L122.029,-7.677A7.5,7.5,0,0,1,114.116,-14.234A115,115,0,0,0,7.041,-114.784A7.5,7.5,0,0,1,0,-122.27Z"
                  fill="url(#gradient-with-gradient-Austin_TX-inner)"
                  style="cursor: initial;"
            >
            </path>
            <linearGradient spreadmethod="pad"
                            id="gradient-with-gradient-Austin_TX-inner"
                            y1="0%"
                            y2="0%"
                            x1="0%"
                            x2="100%"
            >
              <stop offset="0%"
                    stop-opacity="0.3"
                    stop-color="#00ECB1"
              >
              </stop>
              <stop offset="80%"
                    stop-opacity="1"
                    stop-color="#00ECB1"
              >
              </stop>
            </linearGradient>
          </g>
        </g>
        <text dy="-0.5em"
              x="0"
              y="15"
              text-anchor="middle"
              class="_valueLabel_1h164_1"
        >
          24
        </text>
        <text x="0"
              y="150"
              text-anchor="middle"
              alignment-baseline="text-after-edge"
              class="_valueLabel_1eyd5_1"
        >
          Austin, TX
        </text>
      </g>
    </g>
  </svg>
</div>
`;
